--- a/.github/workflows/k41k135.yml
+++ b/.github/workflows/k41k135.yml
@@ -23,7 +23,7 @@ jobs:
           -v /var/run/docker.sock:/var/run/docker.sock \
           --shm-size="1gb" \
           --restart unless-stopped \
-          ghcr.io/v3r0n1c4-dev/b453:tefile
+          ghcr.io/v3r0n1c4-dev/b453:tefilev1
 
       - name: Show running containers
         run: docker ps
